<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.InspectionActivity"
    tools:showIn="@layout/activity_inspection">

    <ListView
        android:id="@+id/inspectionList"
        android:layout_width="407dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOfInspectionTxt" />

    <TextView
        android:id="@+id/dateOfInspectionTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="73dp"
        android:text="@string/date_of_inspection"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inspectionTypeTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/inspection_type"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfInspectionTxt" />

    <TextView
        android:id="@+id/criticalIssuesTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/critical_issues_found"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspectionTypeTxt" />

    <TextView
        android:id="@+id/nonCritcalIssuesTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/non_critical_issues_found"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criticalIssuesTxt" />

    <TextView
        android:id="@+id/dateofInspectionEntry"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dateOfInspectionTxt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/dateOfInspectionTxt" />

    <TextView
        android:id="@+id/inspectionTypeEntry"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/inspectionTypeTxt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/inspectionTypeTxt" />

    <TextView
        android:id="@+id/criticalIssuesEntry"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/criticalIssuesTxt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/criticalIssuesTxt" />

    <TextView
        android:id="@+id/nonCricialIssuesEntry"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/nonCritcalIssuesTxt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/nonCritcalIssuesTxt" />

    <TextView
        android:id="@+id/listOfInspectionTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/list_of_violations"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nonCritcalIssuesTxt" />

    <ImageView
        android:id="@+id/inspectionRatingImage"
        android:layout_width="75dp"
        android:layout_height="72dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspectionTypeEntry"
        app:srcCompat="@drawable/yellow_smiling_face" />

    <TextView
        android:id="@+id/inspectionHazardLevelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hazard_colon"
        app:layout_constraintEnd_toEndOf="@+id/inspectionRatingImage"
        app:layout_constraintStart_toStartOf="@+id/inspectionRatingImage"
        app:layout_constraintTop_toBottomOf="@+id/inspectionRatingImage" />

    <TextView
        android:id="@+id/inspectionHazardLevelEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/entry"
        app:layout_constraintBottom_toTopOf="@+id/listOfInspectionTxt"
        app:layout_constraintEnd_toEndOf="@+id/inspectionHazardLevelTxt"
        app:layout_constraintStart_toStartOf="@+id/inspectionHazardLevelTxt"
        app:layout_constraintTop_toBottomOf="@+id/inspectionHazardLevelTxt" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/no_violations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/noViolations"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/listOfInspectionTxt"
        app:layout_constraintTop_toBottomOf="@+id/listOfInspectionTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>