<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/infoWindowRestaurantName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/restaurant"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/infoWindowRestaurantPicture_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoWindowAddress_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/infoWindowRestaurantName_textView"
            app:layout_constraintTop_toBottomOf="@+id/infoWindowRestaurantName_textView" />

        <TextView
            android:id="@+id/infoWindowHazardLevelTitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hazard_level_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/infoWindowAddress_textView"
            app:layout_constraintTop_toBottomOf="@+id/infoWindowAddress_textView" />

        <ImageView
            android:id="@+id/infoWindowRestaurantPicture_imageView"
            android:layout_width="43dp"
            android:layout_height="39dp"
            android:contentDescription="@string/infoWindowRestaurantPicture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/infoWindowHazardLevelBody_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/hazard_level"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/infoWindowHazardLevelTitle_textView"
            app:layout_constraintStart_toEndOf="@+id/infoWindowHazardLevelTitle_textView"
            app:layout_constraintTop_toBottomOf="@+id/infoWindowAddress_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>